# ocelot-euxfel

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
oxfel/: .#__init__.py  __init__.py  cli.py  conversion.py  defaultprocs.py  fel_track.py  longlist.py  longlist_ocelot_conversion.toml  matching.py  optics.py  plot.py  predefined.py  processes.py  processes.yaml  secmatch.py  sequence.py  tracking.py  xfelt.py
oxfel/accelerator/: sections.py
oxfel/accelerator/lattice/: #i1.py#  __init__.py  b1d-real-optics.pcl  b1d.py  b2d-real-optics.pcl  b2d.py  cl.py  conversion-config.toml  i1.py  i1_old.py  i1d-real-optics.pcl  i1d.py  i1d_old.py  l1.py  l2.py  l3.py  longlist_ocelot_conversion.toml  real-linear-config.toml  real-matched-conf.toml  sa2.py  sase1.py  sase3.py  t1.py  t3.py  t4.py  t4d.py  t5.py  t5d.py  tl1tl2.py  tl34.py  tl34_sase1.py  tl3tl4.py  tl5.py  tld-real-optics.pcl  tld.py  tracking-matched-conf.toml  xfel_sase2.py  xfel_t1.py  xfel_t3.py  xfel_t5.py  (+1 more)
oxfel/accelerator/wakes/Dechirper/: PP_WakeZY_analytical4ECHO.m  PP_WakeZY_analytical4ECHO1.m  PP_WakeZY_analytical4ECHO_old.m  test.py  wake_hor_1m.txt  wake_hor_1m_250mkm.txt  wake_hor_axis_500um.txt  wake_hor_axis_600um.txt  wake_vert_axis_600um.txt  wake_vert_axis_700um.txt
oxfel/astra/: BSA1d_3ps_250pC_10k.ini  __init__.py  converter.py  euxfel-injector.in  generator.in  load.py
oxfel/wakes/: __init__.py
oxfel/wakes/dechirper/: IntegrTr.m  test.py  wake_hor_1m_500mkm.txt  wake_hor_axis_700um.txt  wake_vert_1m.txt  wake_vert_1m_250mkm.txt  wake_vert_1m_test.txt  wake_vert_axis_500um.txt
oxfel/wakes/undulator/: wake_undulator_OCELOT.txt
tests/: __init__.py  test_fel_track.py  test_oxfel.py  test_predefined.py
