[tool]
[tool.poetry]
name = "oxfel"
version = "0.2.0"
homepage = "https://github.com/st-walker/esmesim"
description = "The official UNOFFICIAL model of the EuXFEL in OCELOT"
authors = ["Stuart Walker <stuart.walker@desy.de>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "oxfel" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.dependencies]
python = ">=3.9.7,<4.0"
matplotlib = "^3.7.1"
numpy = "1.24.3"
pandas = "^2.0.2"
toml = "^0.10.2"


[tool.poetry.scripts]
oxfel = 'oxfel.cli:main'
