[tool]
[tool.poetry]
name = "oxfel"
version = "0.3.0"
homepage = "https://github.com/st-walker/esmesim"
description = "The official UNOFFICIAL model of the EuXFEL in OCELOT"
authors = ["Stuart Walker <stuart.walker@desy.de>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "oxfel" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.dependencies]
python = ">=3.9.7,<4.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
toml = "^0.10.2"
numpy = ">=1.24.3"
latdraw = "^0.1.1a0"
pyyaml = "^6.0.1"
click = "^8.1.7"
xlrd = "^2.0.1"
ocelot = {git = "https://github.com/ocelot-collab/ocelot.git", rev = "dev"}


[tool.poetry.scripts]
oxfel = 'oxfel.cli:main'

[tool.poetry.group.dev.dependencies]
poetry-bumpversion = {version = "^0.3.2", optional = true}

[tool.poetry_bumpversion.file."oxfel/__init__.py"]
# Duplicate the line above to add more files to be bumped