[bumpversion]
commit = True
tag = True
current_version = 0.2.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]

[bumpversion:file:oxfel/__init__.py]

[bumpversion:file:setup.cfg]

[bumpversion:file:pyproject.toml]

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[options]
packages = find:
package_dir = 
include_package_data = True

[options.packages.find]
where = oxfel
